cabal-version:      3.0
name:               hacl
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Gabriel Rosmart
maintainer:         gabrielrostron@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Hacl, HaclType
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0,
                      megaparsec == 9.7.0,
                      text == 2.0.2,
                      containers == 0.6.7,
                      scientific == 0.3.8.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hacl-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        hspec-megaparsec == 2.2.1,
        hacl
